--- a/pubsub/pub.html
+++ b/pubsub/pub.html
@@ -9,6 +9,10 @@
 let input = document.getElementById('myInput');
 let button = document.getElementById('myButton');
 
+input.addEventListener('input', function(event) {
+    console.log('Input changed: ', event.target.value);
+});
+
 button.addEventListener('click', function() {
   // 执行输入的内容
   try {
@@ -19,5 +23,43 @@ button.addEventListener('click', function() {
 });
 </script>
 
+<script>
+let socket;
+// 设置重连的间隔时间为 5000 毫秒
+let reconnectInterval = 5000;
+let pub_end_point = "ws://10.254.28.3:3030/pub"
+let sub_end_point = "ws://10.254.28.3:3030/sub"
+let endpoint = pub_end_point 
+
+function connect() {
+    socket = new WebSocket(endpoint );
+
+    // 连接成功时的处理逻辑
+    socket.onopen = () => {
+        console.log('WebSocket Client Connected');
+        window._g_ws = socket
+    };
+
+    // 接收消息时的处理逻辑
+    socket.onmessage = (message) => {
+        console.log('Received: ' + message.data);
+    };
+
+    // 连接关闭或连接出错时的处理逻辑
+    socket.onclose = handleError;
+    socket.onerror = handleError;
+
+    function handleError(error) {
+        console.log('WebSocket error: ', error);
+        console.log('Reconnecting...');
+
+        // 在一段时间后尝试重新连接
+        setTimeout(connect , reconnectInterval);
+    }
+}
+
+// 首次尝试连接
+connect();
+</script>
 </body>
 </html>
