--- a/pubsub/pub.html
+++ b/pubsub/pub.html
@@ -9,9 +9,10 @@
 let input = document.getElementById('myInput');
 let button = document.getElementById('myButton');
 
-input.addEventListener('input', function(event) {
-    console.log('Input changed: ', event.data);
-    window._g_ws.send(event.data)
+input.addEventListener('compositionend', function(event) {
+    //console.log('Input changed: ', event.data);
+    console.log('Input changed: ', event.target.value)
+    window._g_ws.send(event.target.value)
 });
 
 button.addEventListener('click', function() {
