--- a/pubsub/sub.html
+++ b/pubsub/sub.html
@@ -42,6 +42,7 @@ function connect() {
     // 接收消息时的处理逻辑
     socket.onmessage = (message) => {
         console.log('Received: ' + message.data);
+        if(len(message.data) == 0) return
         let input = document.getElementById('myInput');
         input.value =  message.data
     };
