--- a/pubsub/pub.html
+++ b/pubsub/pub.html
@@ -29,8 +29,8 @@ button.addEventListener('click', function() {
 let socket;
 // 设置重连的间隔时间为 5000 毫秒
 let reconnectInterval = 5000;
-let pub_end_point = "ws://10.254.28.3:3030/pub"
-let sub_end_point = "ws://10.254.28.3:3030/sub"
+let pub_end_point = "wss://ws.metiy.xyz:3030/pub"
+let sub_end_point = "wss://ws.metiy.xyz:3030/sub"
 let endpoint = pub_end_point 
 
 function connect() {
@@ -66,7 +66,7 @@ connect();
 
 <script>
 
-let audio_process_ch = "ws://10.254.28.3:3030/audiodata"
+let audio_process_ch = "wss://ws.metiy.xyz:3030/audiodata"
 let websocket = new WebSocket(audio_process_ch);
 
 websocket.onmessage = function(event) {
