--- a/pubsub/pub.html
+++ b/pubsub/pub.html
@@ -74,8 +74,13 @@ websocket.onmessage = function(event) {
     console.log(event.data);
 };
 
-let audioContext = new AudioContext();
-let processor = audioContext.createScriptProcessor(2048, 1, 1);
+let audioContext;
+
+function startAudio() {
+    audioContext = new AudioContext();
+    let processor = audioContext.createScriptProcessor(2048, 1, 1);
+}
+
 
 
 function convertAudioData(audioData) {
@@ -112,6 +117,10 @@ processor.onaudioprocess = function(e) {
     // 发送音频数据到服务器
     websocket.send(convertedData);
 };
+
+
+
+document.querySelector("#start-button").addEventListener("click", startAudio);
 
 </script>
 
