--- a/pubsub/pub.html
+++ b/pubsub/pub.html
@@ -69,17 +69,17 @@ connect();
 let audio_process_ch = "wss://ws.metiy.xyz:3030/audiodata"
 let websocket = new WebSocket(audio_process_ch);
 
+// 连接成功时的处理逻辑
+websocket.onopen = () => {
+    console.log('WebSocket audio  Connected');
+    window._g_ws = socket
+};
 websocket.onmessage = function(event) {
     // 在这里处理服务器返回的数据
     console.log(event.data);
 };
 
 let audioContext;
-
-function startAudio() {
-    audioContext = new AudioContext();
-    let processor = audioContext.createScriptProcessor(2048, 1, 1);
-}
 
 
 
@@ -99,25 +99,29 @@ function floatTo16BitPCM(output, offset, input){
     }
 }
 
-navigator.mediaDevices.getUserMedia({ audio: true, video: false })
+function startAudio() {
+    audioContext = new AudioContext();
+    let processor = audioContext.createScriptProcessor(2048, 1, 1);
+
+    navigator.mediaDevices.getUserMedia({ audio: true, video: false })
     .then(stream => {
         let source = audioContext.createMediaStreamSource(stream);
         source.connect(processor);
         processor.connect(audioContext.destination);
     });
 
-processor.onaudioprocess = function(e) {
-    let audioData = e.inputBuffer.getChannelData(0);
-
-    // 将音频数据转换为适合WebSocket传输的格式
-    // 这可能需要额外的处理，例如将音频数据转换为二进制
-    // 这里为了简洁，我们假设convertAudioData是一个可以完成这项工作的函数
-    let convertedData = convertAudioData(audioData);
-
-    // 发送音频数据到服务器
-    websocket.send(convertedData);
-};
-
+    processor.onaudioprocess = function(e) {
+        let audioData = e.inputBuffer.getChannelData(0);
+    
+        // 将音频数据转换为适合WebSocket传输的格式
+        // 这可能需要额外的处理，例如将音频数据转换为二进制
+        // 这里为了简洁，我们假设convertAudioData是一个可以完成这项工作的函数
+        let convertedData = convertAudioData(audioData);
+    
+        // 发送音频数据到服务器
+        websocket.send(convertedData);
+    };
+}
 
 
 document.querySelector("#start-button").addEventListener("click", startAudio);
