--- a/pubsub/pub.html
+++ b/pubsub/pub.html
@@ -4,6 +4,7 @@
 
 <textarea id="myInput" rows="40" cols="120"></textarea>
 <button id="myButton">执行</button>
+<button id="#start-button">录音</button>
 
 <script>
 let input = document.getElementById('myInput');
