--- a/pubsub/pub.html
+++ b/pubsub/pub.html
@@ -113,8 +113,10 @@ function floatTo16BitPCM(output, offset, input){
 
 function startAudio() {
     if( audioContext )
-        delete audioContext
+    {
+        delete audioContext;
         return ;
+    }
     audioContext = new AudioContext();
     let processor = audioContext.createScriptProcessor(8192, 1, 1);
 
