--- a/pubsub/pub.html
+++ b/pubsub/pub.html
@@ -29,7 +29,7 @@ button.addEventListener('click', function() {
 </script>
 
 <script>
-
+let socket ;
 // 设置重连的间隔时间为 5000 毫秒
 let reconnectInterval = 5000;
 let pub_end_point = "wss://ws.metiy.xyz:3030/pub"
@@ -37,11 +37,12 @@ let sub_end_point = "wss://ws.metiy.xyz:3030/sub"
 let endpoint = pub_end_point 
 
 function connect() {
-    window._g_ws = new WebSocket( endpoint );
+    socket = new WebSocket( endpoint );
 
     // 连接成功时的处理逻辑
-    window._g_ws.onopen = () => {
+    socket.onopen = () => {
         console.log('WebSocket Client Connected');
+        window._g_ws = socket ;
     };
 
     // 接收消息时的处理逻辑
@@ -50,13 +51,14 @@ function connect() {
     };
 
     // 连接关闭或连接出错时的处理逻辑
-    window._g_ws.onclose = handleError;
-    window._g_ws.onerror = handleError;
+    socket.onclose = handleError;
+    socket.onerror = handleError;
 
     function handleError(error) {
         console.log('WebSocket error: ', error);
         console.log('Reconnecting...');
 
+        socket.close();
         delete window._g_ws;
         // 在一段时间后尝试重新连接
         setTimeout(connect , reconnectInterval);
