--- a/pubsub/pub.html
+++ b/pubsub/pub.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<textarea id="myInput" rows="40" cols="120"></textarea>
+<textarea id="myInput" rows="40" cols="120" />
 <br>
 <button id="myButton">执行</button>
 <br>
