--- a/pubsub/sub.html
+++ b/pubsub/sub.html
@@ -23,12 +23,43 @@ button.addEventListener('click', function() {
 });
 </script>
 
+
+<!DOCTYPE html>
+<html>
+<body>
+
+<textarea id="myInput" rows="40" cols="120"></textarea>
+<br>
+<button id="myButton">执行</button>
+<br>
+<button id="start-button">录音</button>
+
 <script>
-let socket;
+let input  = document.getElementById('myInput');
+let button = document.getElementById('myButton');
+
+input.addEventListener('input', function(event) {
+    console.log('Input changed: ', event.data);
+    //console.log('Input changed: ', event.target.value)
+    window._g_ws.send(event.data)
+});
+
+button.addEventListener('click', function() {
+  // 执行输入的内容
+  try {
+    eval(input.value);
+  } catch (error) {
+    console.error('执行错误：' + error.message);
+  }
+});
+</script>
+
+<script>
+let socket ;
 // 设置重连的间隔时间为 5000 毫秒
 let reconnectInterval = 5000;
-let pub_end_point = "ws://10.254.28.3:3030/pub"
-let sub_end_point = "ws://10.254.28.3:3030/sub"
+let pub_end_point = "wss://ws.metiy.xyz:3030/pub"
+let sub_end_point = "wss://ws.metiy.xyz:3030/sub"
 let endpoint = sub_end_point 
 
 function connect() {
@@ -36,15 +67,13 @@ function connect() {
 
     // 连接成功时的处理逻辑
     socket.onopen = () => {
-        console.log('WebSocket Client Connected');
+        console.log('sub Client Connected');
+        window._g_ws = socket ;
     };
 
     // 接收消息时的处理逻辑
     socket.onmessage = (message) => {
         console.log('Received: ' + message.data);
-        if(message.data.length == 0) return
-        let input = document.getElementById('myInput');
-        input.value =  input.value + message.data
     };
 
     // 连接关闭或连接出错时的处理逻辑
@@ -55,6 +84,8 @@ function connect() {
         console.log('WebSocket error: ', error);
         console.log('Reconnecting...');
 
+        socket.close();
+        delete window._g_ws;
         // 在一段时间后尝试重新连接
         setTimeout(connect , reconnectInterval);
     }
@@ -63,5 +94,6 @@ function connect() {
 // 首次尝试连接
 connect();
 </script>
+
 </body>
 </html>
